APIs for births/deaths working. function for toggle asc/dsc. Daycontent/info component complete.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.10.4",
     "express": "^4.17.1",
     "mongoose": "^5.11.18",
+    "request": "^2.88.2",
     "sass": "^1.32.8"
   }
 }
